# chasing-the-plan

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 26521705c208_initial_schema.py  b7e2c1a9d4f0_add_week_to_workout.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/routers/: athletes.py  exercises.py  muscle_groups.py  reports.py  workouts.py
app/crud/: athletes.py  exercises.py  muscle_groups.py  workouts.py
app/models/: __init__.py  athlete.py  base.py  enums.py  exercise.py  muscle_group.py  plan_exercise.py  plan_unit.py  workout.py  workout_block.py
app/reports/: assembler.py  format.py  pdf.py  xlsx.py
app/schemas/: athlete.py  exercise.py  muscle_group.py  workout.py
deploy/: nginx.example.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: Combobox.tsx  Layout.tsx  ui.tsx
frontend/src/pages/: AthletesPage.tsx  ExercisesPage.tsx  PlanBuilderPage.tsx
samples/: exercises.xlsx
seed/: exercises.http  generate_seed_http.py
tests/: conftest.py  test_api.py  test_reports.py
